[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_ffi"
crate-type = ["staticlib"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
