[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_ffi"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde", "js"] }
base64 = "0.22"
id3 = "1"
infer = "0.19.0"

[target.'cfg(not(target_os = "ios"))'.dependencies]
xmpkit = { version = "0.1.4", default-features = false, features = ["wasm", "png", "jpeg", "mpeg4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "multipart"]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Navigator", "StorageManager", "Window",
    "FileSystemDirectoryHandle", "FileSystemFileHandle",
    "FileSystemGetFileOptions", "FileSystemWritableFileStream",
    "File", "Blob",
] }
gloo-timers = { version = "0.4.0", features = ["futures"] }

[target.'cfg(all(target_vendor = "apple", not(target_arch = "wasm32")))'.dependencies]
xmp_toolkit = "1"
dirs = "5"

[dev-dependencies]
png = "0.17"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
